# ts3-sec-cuda-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
benches/: kernel_params.rs
inis/: level22.ini  level8-12.ini  level8-9.ini  level8.ini
src/: cli.rs  helpers.rs  identity.rs  level_improver.rs  main.rs
src/hashers/: mod.rs
src/hashers/cpu/: mod.rs
src/hashers/cuda/: mod.rs  sha1.cu  sha1_optimized.cu
