[package]
name = "ts3-sec-cuda-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ini = { package = "rust-ini", version = "0.21" }
thiserror = "2.0"
tsproto-types = { git = "https://github.com/ReSpeak/tsclientlib.git", rev = "3fbfa26ead0d3e5b38288b55abe3e2d636a97115" }
sha1 = "0.10"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
cudarc = { version = "0.17.6", features = ["cuda-13000"] }
rayon = "1.10"

[lib]
name = "ts3_sec_cuda_rs"
path = "src/lib.rs"

[[bin]]
name = "ts3-sec-cuda-rs"
path = "src/main.rs"

[[bench]]
name = "kernel_params"
path = "benches/kernel_params.rs"
harness = false